--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,29 @@
-.App {
-  text-align: center;
+body {
+  font-family: "Adelle Sans";
+  font-weight: 400;
+  color: #2e3333;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+h1,
+h2,
+h3 {
+  font-family: "Stratos Deliveroo Web";
+  font-weight: 600;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h2,
+h3 {
+  font-size: 28px;
+  line-height: 29px;
 }
 
-.App-link {
-  color: #61dafb;
+h3 {
+  margin: 30px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
